<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_products"
        android:icon="@drawable/ic_nav_products"
        android:title="@string/nav_products" />
    <item
        android:id="@+id/nav_sales"
        android:icon="@drawable/ic_nav_sales"
        android:title="@string/nav_sales" />
    <item
        android:id="@+id/nav_reports"
        android:icon="@drawable/ic_nav_reports"
        android:title="@string/nav_reports" />
    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/ic_nav_more"
        android:title="@string/nav_more" />
</menu>